Parsed render states/render queue from CgMaterial .shader source. Check example.shader for everything added